mynginx-demo/templates/demo-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: nginx-demo.example.com
    http:
      paths:
      - path: /webapp1
        pathType: Prefix
        backend:
          service:
            name: webapp1
            port:
              number: 80
      - path: /webapp2
        pathType: Prefix
        backend:
          service:
            name: webapp2
            port:
              number: 80
      - path: /webapp3
        pathType: Prefix
        backend:
          service:
            name: webapp3
            port:
              number: 80
